# meta-game-bot

./: !.env.template  .env.example  .flake8  .gitignore  LICENCE  LICENSE  NOVI_SAD_GAME_SETUP.md  NOVI_SAD_README.md  README.md  README_ru.md  belgrade_game.db  check_novi_sad_setup.py  cleanup.py  cleanup_and_start.py  config.json  config.py  create_districts.py  create_politicians.py  db_fix.py  db_init.py  db_setup.py  error_handlers.py  game_jobs.py  init_db.py  language_utils.py  languages.py  languages_base.py  languages_update.py  main.py  pyproject.toml  readme-1.md  requirements.txt  reset_and_run.py  restart_bot.sh  run_bg_service.py  run_novi_sad_game.py  run_service.sh  setup.py  setup_novi_sad.py  start.sh  (+7 more)
alembic/: env.py
api/: __init__.py  main.py  routes.py
app/: __init__.py  config.py  db.py  logger.py  translator.py
bot/: __init__.py  bot.py  button-validation.py  callbacks.py  commands.py  constants.py  context.py  dispatcher.py  dynamic-keyboards.py  error-handling.py  handler_factory.py  handlers.py  keyboards.py  language_command.py  main.py  menu-helper.py  middleware.py  politicians.py  states.py
config/: flow.json
database/: schema.py  utils.py
db/: 01_schema.sql  02_tables.sql  03_indexes.sql  04_validation.sql  05_functions_core.sql  06_functions_game.sql  07_functions_api.sql  08_security.sql  09_initial_data.sql  10_sample_data.sql  11_fix_player_exists.sql  __init__.py  create_coordinated_tables.py  db_client.py  error_handling.py  game_queries.py  migrations.py  permission_checker.py  populate_politicians.py  queries.py  schema.py  schema.sql  (+3 more)
(+60 files in other folders)
