[project]
name = "meta_game_bot"
version = "0.1.0"
description = "Aiogram bot for Novisad LARP game."
authors = [
    {name = "Anatoly Lazarev",email = "support@lazarev.cloud"},
    {name = "Not That Droids",email = "dv.tarkov@google.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aiogram (>=3.19.0,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
flake8 = "^7.1.2"
alembic = "^1.15.1"
flake8-docstrings = "^1.7.0"

